--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "fontfaceobserver": "^2.1.0",
     "gsap": "^3.7.1",
     "hammerjs": "^2.0.8",
+    "pixi-hammer": "^0.6.0",
     "pixi.js": "~5.3.3",
     "power-di": "^2.4.8"
   },
