--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "hammerjs": "^2.0.8",
     "pixi-hammer": "git+ssh://git@github.com/mralbobo/pixi-hammer.git",
     "pixi.js": "~5.3.3",
-    "power-di": "^2.4.8"
+    "power-di": "^2.4.8",
+    "rxjs": "^7.5.1"
   },
   "devDependencies": {
     "@types/jest": "^27.0.1",
